--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "apexcharts": "^3.54.0",
     "bootstrap": "^5.3.3",
     "flowbite": "^2.5.2",
     "rxjs": "~7.8.0",
